--- a/app/src/main/res/layout/activity_report_crime.xml
+++ b/app/src/main/res/layout/activity_report_crime.xml
@@ -52,9 +52,10 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:id="@+id/upload_image"
+        android:id="@+id/image"
         android:layout_marginVertical="30dp"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_baseline_image_24"/>
 
     <Button
         android:layout_width="match_parent"
